--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,6 +9,10 @@
 }
 
 /* shared style */
+.text-center {
+    text-align: center;
+}
+
 .text-primary {
     color: #FD6E0A
 }
@@ -38,7 +42,8 @@
     font-weight: 700;
     line-height: 48px;
 }
-.bg-secondary{
+
+.bg-secondary {
     background: rgb(255, 248, 243);
 }
 
@@ -112,29 +117,53 @@ nav ul {
 .banner {
     display: flex;
 }
+
 /*main styles */
-main{
+main {
     max-width: 1140px;
     max-height: 550px;
     margin: 0 auto;
 }
 
+
 /* about styles */
 
-.about{
+.about {
     border-radius: 10px;
     padding: 110px 115px;
     text-align: center;
     margin-top: 120px;
 }
 
-.item-description{
+.item-description {
     font-size: 20px;
     font-weight: 700;
 
 }
-.about-items{
+
+.about-items {
     display: flex;
     justify-content: space-around;
     margin-top: 32px;
+}
+
+/* skills section styles */
+.skill-container {
+    display: flex;
+    gap: 20px;
+    margin-top: 80px;
+    
+}
+
+.skill {
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+    margin-bottom: 80px;
+}
+
+.skill>p {
+    width: 201px;
+    text-align: left;
 }
