--- a/Styles/style.css
+++ b/Styles/style.css
@@ -152,7 +152,7 @@ main {
     display: flex;
     gap: 20px;
     margin-top: 80px;
-    
+
 }
 
 .skill {
@@ -166,4 +166,61 @@ main {
 .skill>p {
     width: 201px;
     text-align: left;
+}
+
+/* resume section styles */
+.resume-container {
+    display: flex;
+    gap: 20px;
+}
+
+.experience-subtitle {
+    font-size: 20px;
+}
+
+.experience-description,
+.experience-subtitle {
+    color: rgb(117, 117, 117);
+}
+
+.experience-title {
+    color: rgb(71, 71, 71);
+    font-size: 25px;
+    font-weight: 700;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.experience{
+    margin-bottom: 40px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 5px;
+}
+/* footer-styles */
+.footer{
+    display: flex;
+    padding: 130px 230px;
+    gap: 80px;
+}
+.footer-column{
+    width: 50%;
+}
+form input[type="txt"],form input[type="email"]{
+    height: 64px;
+    width: 100%;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    border: none;
+    background-color: white;
+}
+form textarea{
+    width: 461px;
+    width: 100%;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    background-color: white;
 }
